[project]
name = "2025-p1-n10522174"
version = "0.1.0"
description = ""
authors = [
    {name = "achand",email = "n10522174@qut.edu.au"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
